src/test/ui/resolve/resolve-hint-macro.rs
fn main() {
    assert(true);
    //~^ ERROR expected function, found macro `assert`
}
